<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"


    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:checkable="true"
            android:icon="@drawable/home_black"
            android:title="@string/home"
            android:visible="true"
            android:iconTint="@color/black"/>
        <item
            android:id="@+id/nav_favorit"
            android:icon="@drawable/favorite_icon"
            android:title="@string/favorits"
            android:visible="true"/>




    </group>


        <item android:title="@string/profile">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile_icon"
                    android:title="@string/profile" />
                </group>
            </menu>
        </item>

    <group android:checkableBehavior="single">
    <item
        android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate_icon"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/share" />



        </menu>
    </item>
    </group>
    <group android:checkableBehavior="single">


    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/info_icon"
        android:title="@string/about_us"  />
    </group>


</menu>